fix(src/*): missing white space bug fix

--- a/src/Console.module.scss
+++ b/src/Console.module.scss
@@ -1,7 +1,6 @@
 .container {
   width: 100%;
   height: 100%;
-  background-color: $default-background-color;
   color: $primary-color;
 }
 
@@ -18,7 +17,7 @@
   height: 100%;
   resize: none;
   font-size: 16px;
-  background-color: inherit;
+  background-color: $default-background-color;
   color: inherit;
   line-height: 2em;
 }
